--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               <h5 class="list_item_title ac-header ac-trigger">Есть ссылки на работы?</h5>
               <p class="list_item_text ac-panel">
                 Вот <a
-                  href="https://miro.com/welcomeonboard/ckxMcTRCWTZPZnhOQ2ZIeUQzR2cwaEZ0UWxoeHVKa0lFUkxra00yM2lNMkFMSFVFMndLdXVKdExBQzlnT0Qxb3wzNDU4NzY0NTY3MzI0ODQ1NjMxfDI=?share_link_id=811907457079"
+                  href="https://github.com/Elisaveta-Zavorina/Documentation-examples.git"
                   target="_blank">тут</a> лежит чек-лист на полную проверку формы оплаты (frontend, backend,
                 нефункциональные тесты)
               </p>
