--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <p class="list_item_text ac-panel">
                 Вот <a
                   href="https://github.com/Elisaveta-Zavorina/Documentation-examples.git"
-                  target="_blank">тут</a> лежит чек-лист на полную проверку формы оплаты (frontend, backend,
+                  target="_blank">тут</a> лежат примеры чек-листов (frontend, backend,
                 нефункциональные тесты)
               </p>
             </li>
