Исправила отступы заголовков

--- a/index.html
+++ b/index.html
@@ -69,9 +69,8 @@
             <li class="list_item ac">
               <h5 class="list_item_title ac-header ac-trigger">Есть ссылки на работы?</h5>
               <p class="list_item_text ac-panel">
-                Вот <a
-                  href="https://github.com/Elisaveta-Zavorina/Documentation-examples.git"
-                  target="_blank">тут</a> лежат примеры чек-листов (frontend, backend,
+                Вот <a href="https://github.com/Elisaveta-Zavorina/Documentation-examples.git" target="_blank">тут</a>
+                лежат примеры чек-листов (frontend, backend,
                 нефункциональные тесты)
               </p>
             </li>
