--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
 
           <ul class="list accordion-container">
             <li class="list_item ac">
-              <p class="list_item_title ac-header ac-trigger">Чем занимаюсь?</p>
+              <p class="list_item_title ac-header ac-trigger"
+                style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Чем занимаюсь?</p>
               <p class="list_item_text ac-panel">
                 Я много тестирую вручную, локализую баги, взаимодействую с тех-поддержкой, пишу документацию. Стремлюсь
                 уменьшить время на тестирование с помощью автотестов, например, на cypress
@@ -67,7 +68,8 @@
             </li>
 
             <li class="list_item ac">
-              <h5 class="list_item_title ac-header ac-trigger">Есть ссылки на работы?</h5>
+              <h5 class="list_item_title ac-header ac-trigger"
+                style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Есть ссылки на работы?</h5>
               <p class="list_item_text ac-panel">
                 Вот <a href="https://github.com/Elisaveta-Zavorina/Documentation-examples.git" target="_blank">тут</a>
                 лежат примеры чек-листов (frontend, backend,
@@ -76,7 +78,9 @@
             </li>
 
             <li class="list_item ac">
-              <h5 class="list_item_title ac-header ac-trigger">Почему выбрала IT и тестирование, в частности?</h5>
+              <h5 class="list_item_title ac-header ac-trigger"
+                style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Почему выбрала IT и тестирование, в
+                частности?</h5>
               <p class="list_item_text ac-panel">
                 Мне нравится, что в IT можно бесконечно прокачивать свои знания. Это не дает скучать и делает тебя
                 ценным специалистом. А тестирование выбрала потому, что душнить за деньги &ndash; это же работа мечты
