Изменила стиль заголовков

--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
 
             <li class="list_item ac">
               <h5 class="list_item_title ac-header ac-trigger"
-                style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Почему выбрала IT и тестирование, в
-                частности?</h5>
+                style="font-size: 24px; font-family: 'Montserrat', sans-serif;">Почему выбрала IT и тестирование?</h5>
               <p class="list_item_text ac-panel">
                 Мне нравится, что в IT можно бесконечно прокачивать свои знания. Это не дает скучать и делает тебя
                 ценным специалистом. А тестирование выбрала потому, что душнить за деньги &ndash; это же работа мечты
